# svideostream

./: .gitignore  README.md  app-debug.apk  app-release.apk
android/svideostream/: settings.gradle
android/svideostream/app/: build.gradle
android/svideostream/app/src/androidTest/java/cn/cxw/svideostream/: ExampleInstrumentedTest.java
android/svideostream/app/src/main/: AndroidManifest.xml
android/svideostream/app/src/main/java/cn/cxw/svideostream/: MainActivity.java
android/svideostream/app/src/main/java/cn/cxw/svideostream/activities/: CameraActivity.java  (+3 more)
android/svideostream/app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_screen.xml  notification_screen.xml  table_stream_info_row.xml
android/svideostream/app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  strings_pref.xml  styles.xml
android/svideostream/app/src/main/res/xml/: preferences.xml
android/svideostream/app/src/test/java/cn/cxw/svideostream/: ExampleUnitTest.java
android/svideostream/gpuimageex/src/androidTest/java/cxw/cn/gpuimageex/: ExampleInstrumentedTest.java
android/svideostream/gpuimageex/src/main/: AndroidManifest.xml
android/svideostream/gpuimageex/src/main/java/cxw/cn/gpuimageex/: GPUImageBeautifyFilter.java  GPUImageEx.java  GPUImageExCamera.java  GPUImageExFrameBuffer.java  GPUImageFilter.java  GPUImageTransformFilter.java  GlRenderThread.java  GlThreadImageReader.java  GlThreadPreview.java  GraphicBufferCapture.java  IPreviewView.java  OpenGlUtils.java  OpenglCapture.java  PixelBuffer.java  ReadPixelCapture.java  Rotation.java
android/svideostream/gpuimageex/src/main/res/values/: strings.xml
android/svideostream/gpuimageex/src/test/java/cxw/cn/gpuimageex/: ExampleUnitTest.java
android/svideostream/libs/: magiccameralib-1.1.aar  magiccameralib-2.1.aar  openglesutils-2.1.aar
android/svideostream/magiccameralive/: build.gradle
android/svideostream/magiccameralive/src/androidTest/java/cn/cxw/magiccameralive/: ExampleInstrumentedTest.java
android/svideostream/magiccameralive/src/main/: AndroidManifest.xml
android/svideostream/magiccameralive/src/main/java/cn/cxw/magiccameralive/: MagicCameraFrameSource.java
android/svideostream/magiccameralive/src/main/res/values/: strings.xml
android/svideostream/magiccameralive/src/test/java/cn/cxw/magiccameralive/: ExampleUnitTest.java
android/svideostream/screenlive/: build.gradle
android/svideostream/screenlive/src/androidTest/java/cn/cxw/screenlive/: ExampleInstrumentedTest.java
android/svideostream/screenlive/src/main/: AndroidManifest.xml
android/svideostream/screenlive/src/main/java/cn/cxw/screenlive/: ScreenVideoFrameSource.java
android/svideostream/screenlive/src/main/res/values/: strings.xml
android/svideostream/screenlive/src/test/java/cn/cxw/screenlive/: ExampleUnitTest.java
android/svideostream/svideostreamlib/: build.gradle
android/svideostream/svideostreamlib/src/androidTest/java/cn/cxw/svideostreamlib/: ExampleInstrumentedTest.java
android/svideostream/svideostreamlib/src/main/: AndroidManifest.xml
android/svideostream/svideostreamlib/src/main/java/cn/cxw/svideostreamlib/: AudioRecorder.java  CameraVideoStream.java  CommonSetting.java  GPUImageExFrameSource.java  MediaCodecVideoEncoder.java  MediaConfig.java  SVideoStream.java  ScreenVideoFrameSource.java  StatsReport.java  VideoFrameSource.java  VideoStreamConstants.java  VideoStreamProxy.java  VideoStreamSetting.java
android/svideostream/svideostreamlib/src/main/res/values/: strings.xml
android/svideostream/svideostreamlib/src/test/java/cn/cxw/svideostreamlib/: ExampleUnitTest.java
svideostream/: CMakeLists.txt  android.toolchain.cmake
svideostream/android/: CommonSetting_JniWrap.cpp  CommonSetting_JniWrap.h  SVideoStream_JniWrap.cpp  SVideoStream_JniWrap.h  VideoEncoderMediaCodec.cpp  VideoEncoderMediaCodec.h
svideostream/android/openglcapture/: CMakeLists.txt  DynamicLibrary.cpp  GlShader.cpp  GlShader.h  GraphicBuffer.cpp  GraphicBuffer.h  Log.h  OpenglCapture.cpp  OpenglCapture.h  OpenglCapture_JniWrap.cpp  OpenglCapture_JniWrap.h
svideostream/src/: AudioEncoderBase.h  AudioEncoderFdkaac.cpp  AudioEncoderFdkaac.h  BufferQuene.h  Common.h  CommonSetting.cpp  CommonSetting.h  FFmpegMux.cpp  FFmpegMux.h  H264AacUtils.cpp  H264AacUtils.h  Log.h  MediaConfig.h  PlatformThreadEx.h  RtmpCommon.cpp  RtmpCommon.h  RtmpLive.cpp  RtmpLive.h  SVideoStream.cpp  SVideoStream.h  StatsCollector.cpp  StatsCollector.h  StatsReport.cpp  StatsReport.h  VideoEncoderBase.cpp  VideoEncoderBase.h  VideoEncoderFactory.cpp  VideoEncoderFactory.h  VideoEncoderX264.cpp  VideoEncoderX264.h
thirdparts/: build-baselib.sh  build-fdk.sh  build-ffmpeg.sh  build-librtmp.sh  build-libyuv.sh  build-x264.sh  download-baselib.sh  download-fdkaac.sh  download-ffmpeg.sh  download-x264.sh
thirdparts/librtmp/jni/: Android.mk  Application.mk  rtmp.c
thirdparts/libyuv/jni/: Android.mk  Application.mk
(+12 files in other folders)
